fix first message alignment

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -13,6 +13,7 @@
   position: fixed;
   bottom: 10vh;
   overflow: auto;
+  width: 100%;
   /*background-color: red;*/
 
 }
