--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -1,6 +1,8 @@
 .Event{
   display:flex;
   flex-direction:column;
+  align-items: center;
+  margin-top: 10px;
 }
 h3{
   text-align: center;
